--- a/index.ipynb
+++ b/index.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,42 +178,70 @@
     "    names = name.split(' ')\n",
     "    first_name = names[0]\n",
     "    last_name = names[1]\n",
+    "    print(first_name)\n",
+    "    print(last_name)\n",
     "    return first_name[0] + last_name[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Homer Simpson\n",
+      "Homer\n",
+      "Simpson\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'HS'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "homer = simpsons[0]\n",
+    "print(homer)\n",
     "find_initial(homer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Homer\n",
+      "Simpson\n",
+      "Marge\n",
+      "Simpson\n",
+      "Bart\n",
+      "Simpson\n",
+      "Maggie\n",
+      "Simpson\n",
+      "Lisa\n",
+      "Simpson\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "['HS', 'MS', 'BS', 'MS', 'LS']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,16 +302,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<map at 0x10eda6860>"
+       "<map at 0x7fdc70064240>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +342,7 @@
        " 'Lisa Simpson']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,16 +360,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Homer\n",
+      "Simpson\n",
+      "Marge\n",
+      "Simpson\n",
+      "Bart\n",
+      "Simpson\n",
+      "Maggie\n",
+      "Simpson\n",
+      "Lisa\n",
+      "Simpson\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "['HS', 'MS', 'BS', 'MS', 'LS']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +428,7 @@
        "16"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +455,7 @@
        "[8, 1024, 2097152]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
